# publichat

./: .gitignore  Cargo.toml  README.md  build.rs
misc/: plan.drawio
page/: 404.html  client.js  index.html  jspack.js  mobile.html  tools.html
src/: buffers.rs  constants.rs  db.rs  helpers.rs  http.rs  lib.rs  main.rs  msg.rs  smrt.rs  ws.rs
