[package]
name = "publichat"
version = "0.1.0"
edition = "2021"
default-run= "client"

[dependencies]
aes = "0.8.1"
base64 = "0.13.0"
ctr = "0.9.1"
sha1_smol = "1.0.0"
sha3 = "0.10.1"
crossterm = "0.23.2"  # TODO: optional for client only?
rand = "0.8.5"  # TODO: this too
ed25519-dalek = "1.0.1"

[build-dependencies]
minify-html = { version = "0.8.0", features = ["js-esbuild"], optional = true }

[features]
minify = ["minify-html"]
tls = []
